# zephyr-dom0-xt

./: CMakeLists.txt  Kconfig  TODO.txt  prj.conf  west.yml
boards/: rcar_h3ulcb_ca57.conf  rcar_h3ulcb_ca57.overlay  rcar_salvator_xs_m3.overlay  rcar_spider.conf  rcar_spider.overlay  xenvm-qemu.overlay
domains/domd/: domain_bins.S  domd_cfg_h3ulcb.c  domd_cfg_salvator_xs.c  domd_cfg_spider.c
domains/domu/: domu_cfgs.c
prebuilt/: domd.dtb  domd.dts  r8a77951-h3ulcb-4x2g-kf-domd.dtb  r8a77961-salvator-xs-2x4g-domd.dtb  r8a779f0-spider-domd.dtb
src/: dom0.c  domain_bins.S  domd_bin.S  domd_cfg.c
